I remove <p>don't have an account?<p>

--- a/logIn.html
+++ b/logIn.html
@@ -67,6 +67,8 @@
       <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+    <p><a href="index.html">← Back to Home</a></p>
+
   </div>
 </body>
 </html>
