--- a/signUP.html
+++ b/signUP.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+  <a href="signup.html">Sign Up</a>
   <p>Already have an account? <a href="login.html">Login</a></p>
   <title>Sign Up - AcadEase</title>
   <style>
@@ -70,6 +70,8 @@
       <button type="submit">Sign Up</button>
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
+    <p><a href="index.html">← Back to Home</a></p>
+
   </div>
 </body>
 </html>
