--- a/logIn.html
+++ b/logIn.html
@@ -66,7 +66,7 @@
       <input type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+    <a href="signup.html">Sign Up</a>
     <p><a href="index.html">← Back to Home</a></p>
 
   </div>
