--- a/signUP.html
+++ b/signUP.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <a href="signup.html">Sign Up</a>
-  <p>Already have an account? <a href="login.html">Login</a></p>
+  <a href="login.html">Login</a>
   <title>Sign Up - AcadEase</title>
   <style>
     body {
