ill remove sign up and logIn text

--- a/signUP.html
+++ b/signUP.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <a href="signup.html">Sign Up</a>
-  <a href="login.html">Login</a>
+  <a href="signup.html"></a>
+  <a href="login.html"></a>
   <title>Sign Up - AcadEase</title>
   <style>
     body {
