ill add this <a href="index.html">← Back to Home</a> into my signIn and LogIn

--- a/logIn.html
+++ b/logIn.html
@@ -67,6 +67,8 @@
       <button type="submit">Login</button>
     </form>
     <a href="signup.html">Sign Up</a>
+    <a href="index.html">← Back to Home</a>
+
 
 
   </div>
