--- a/signUP.html
+++ b/signUP.html
@@ -70,6 +70,8 @@
       <button type="submit">Sign Up</button>
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
+    <a href="index.html">← Back to Home</a>
+
 
   </div>
 </body>
