i removed the 'ABOUT'

--- a/frontpage.html
+++ b/frontpage.html
@@ -14,7 +14,7 @@
   <header>
     <h1>AcadEase!</h1>
     <nav>
-      <a href="#about">About</a>
+      <a href="#about"></a>
       <a href="#features">Features</a>
       <a href="#contact">Contact</a>
     </nav>
