--- a/frontpage.html
+++ b/frontpage.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css"> 
   <a href="login.html" class="btn">Get Started</a>
   <a href="login.html" class="btn">Sign In</a>
-  <a href="signup.html" class="btn">Sign Up</a>
+  <a href="signup.html" class="btn">Sign</a>
 
 </head>
 <body>
