I added the A smart web POrtal

--- a/frontpage.html
+++ b/frontpage.html
@@ -22,7 +22,7 @@
 
   <section class="hero">
     <div>
-      <h2></h2>
+      <h2> A Smart Web Portal</h2>
       <p>AcadEase helps students and teachers stay organized with assignments, schedules, and communication – all in one powerful platform.</p>
       <a href="#features" class="btn">Get Started</a>
     </div>
