--- a/frontpage.html
+++ b/frontpage.html
@@ -6,7 +6,7 @@
   <title>AcadEase!</title>
   <link rel="stylesheet" href="style.css"> 
   <a href="login.html" class="btn">Get Started</a>
-  <a href="login.html" class="btn">Sign </a>
+  <a href="login.html" class="btn">Sign In</a>
   <a href="signup.html" class="btn">Sign Up</a>
 
 </head>
