--- a/frontpage.html
+++ b/frontpage.html
@@ -12,11 +12,11 @@
 </head>
 <body>
   <header>
-    <h1>AcadEase</h1>
+    <h1>AcadEase!</h1>
     <nav>
-      <a href="#about"></a>
+      <a href="#about">About</a>
       <a href="#features">Features</a>
-      <a href="#contact">Contact</a>
+      <a hrSef="#contact">Contact</a>
     </nav>
   </header>
 
