i add logIn and SignUP

--- a/logIn.html
+++ b/logIn.html
@@ -66,8 +66,7 @@
       <input type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <a href="signup.html">Sign Up</a>
-    <a href="index.html">← Back to Home</a>
+    <a href="index.html">Back to Home</a>
 
 
 
