--- a/screen.html
+++ b/screen.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AcadEase!</title>
   <link rel="stylesheet" href="style.css"> 
+  <a href="login.html" class="btn">Get Started</a>
   <a href="login.html" class="btn">Sign In</a>
   <a href="signup.html" class="btn">Sign Up</a>
 
