--- a/signUP.html
+++ b/signUP.html
@@ -70,7 +70,7 @@
       <button type="submit">Sign Up</button>
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
-    <a href="index.html">← Back to Home</a>
+    <a href="index.html">Back to Home</a>
 
 
   </div>
