--- a/logIn.html
+++ b/logIn.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - AcadEase</title>
+  <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
