--- a/signUP.html
+++ b/signUP.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <a href="signup.html"></a>
   <a href="login.html"></a>
+  <p>Already have an account? <a href="login.html">Login</a></p>
+
+
   <title>Sign Up - AcadEase</title>
   <style>
     body {
