--- a/logIn.html
+++ b/logIn.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - AcadEase</title>
   <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+  <p><a href="index.html">← Back to Home</a></p>
+
 
   <style>
     body {
