--- a/signUP.html
+++ b/signUP.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <p>Already have an account? <a href="login.html">Login</a></p>
+  <p><a href="index.html">← Back to Home</a></p>
+
 
 
   <title>Sign Up - AcadEase</title>
