--- a/logIn.html
+++ b/logIn.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - AcadEase</title>
-  <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+  <a href="signup.html">Sign Up</a>
   <p><a href="index.html">← Back to Home</a></p>
 
 
