--- a/signUP.html
+++ b/signUP.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <p>Already have an account? <a href="login.html">Login</a></p>
+  <a href="login.html">Login</a>
   <p><a href="index.html">← Back to Home</a></p>
 
 
