--- a/logIn.html
+++ b/logIn.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - AcadEase</title>
   <a href="signup.html">Sign Up</a>
-  <p><a href="index.html">← Back to Home</a></p>
+  <p><a href="index.html"></a></p>
 
 
   <style>
