--- a/signUP.html
+++ b/signUP.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <a href="login.html">Login</a>
-  <p><a href="index.html">← Back to Home</a></p>
+  <p><a href="index.html"></a></p>
 
 
 
