--- a/logIn.html
+++ b/logIn.html
@@ -72,7 +72,7 @@
     </form>
 
     <a href="signup.html">Sign Up</a>
-    <p><a href="index.html">← Back to Home</a></p>
+   <p><a href="index.html">Back to Home</a></p>
 
 
   </div>
