--- a/signUP.html
+++ b/signUP.html
@@ -72,7 +72,7 @@
       <button type="submit">Sign Up</button>
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
-    <p><a href="index.html">← Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
 
 
 
