I ADD THIS CODE <!DOCTYPE html> <html lang="en"> <head>   <meta charset="UTF-8">   <meta name="viewport" content="width=device-width, initial-scale=1.0">   <title>Login - AcadEase</title>   <style>     body {       font-family: 'Segoe UI', sans-serif;       background: #f0fdf4;       display: flex;       justify-content: center;       align-items: center;       height: 100vh;       margin: 0;     }     .form-box {       background: #fff;       padding: 30px;       border-radius: 15px;       box-shadow: 0 6px 15px rgba(0,0,0,0.1);       width: 320px;       text-align: center;     }     h2 {       color: #1b4332;       margin-bottom: 20px;     }     input {       width: 100%;       padding: 12px;       margin: 10px 0;       border: 1px solid #ccc;       border-radius: 8px;     }     button {       width: 100%;       padding: 12px;       border: none;       border-radius: 8px;       background: #1b4332;       color: white;       font-weight: bold;       cursor: pointer;       transition: 0.3s;     }     button:hover {       background: #40916c;     }     p {       margin-top: 15px;       font-size: 0.9rem;     }     a {       color: #1b4332;       text-decoration: none;       font-weight: bold;     }   </style> </head> <body>   <div class="form-box">     <h2>Login</h2>     <form>       <input type="email" placeholder="Email" required>       <input type="password" placeholder="Password" required>       <button type="submit">Login</button>     </form>     <p>Don't have an account? <a href="signup.html">Sign Up</a></p>     <p><a href="index.html">← Back to Home</a></p>   </div> </body> </html>  IN MY LOG IN

--- a/logIn.html
+++ b/logIn.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - AcadEase</title>
-
-  <p><a href="index.html"></a></p>
-
-
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -70,11 +66,8 @@
       <input type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-
-    <a href="signup.html">Sign Up</a>
-   <p><a href="index.html">Back to Home</a></p>
-
-
+    <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+    <p><a href="index.html">← Back to Home</a></p>
   </div>
 </body>
 </html>
