--- a/frontpage.html
+++ b/frontpage.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AcadEase!</title>
   <link rel="stylesheet" href="style.css"> 
-  
+  <a href="login.html" class="btn">Get Started</a>
+
+
+
 </head>
 <body>
   <header>
