--- a/logIn.html
+++ b/logIn.html
@@ -66,8 +66,8 @@
       <input type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-    <p><a href="index.html">← Back to Home</a></p>
+    <a href="index.html">← Back to Home</a>
+
   </div>
 </body>
 </html>
