--- a/signUP.html
+++ b/signUP.html
@@ -67,8 +67,8 @@
       <input type="password" placeholder="Password" required>
       <button type="submit">Sign Up</button>
     </form>
-    <p>Already have an account? <a href="login.html">Login</a></p>
-    <p><a href="index.html">← Back to Home</a></p>
+    <a href="index.html">← Back to Home</a>
+
   </div>
 </body>
 </html>
