--- a/signUP.html
+++ b/signUP.html
@@ -67,7 +67,7 @@
       <input type="password" placeholder="Password" required>
       <button type="submit">Sign Up</button>
     </form>
-    <a href="index.html">← Back to Home</a>
+    <a href="frontpage.html">← Back to Home</a>
 
   </div>
 </body>
