--- a/logIn.html
+++ b/logIn.html
@@ -66,7 +66,7 @@
       <input type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <a href="index.html">← Back to Home</a>
+    <a href="frontpage.html">← Back to Home</a>
 
   </div>
 </body>
