i change the color in button in sign up

--- a/signUP.html
+++ b/signUP.html
@@ -39,7 +39,7 @@
       border: none;
       border-radius: 8px;
       background: #1b4332;
-      color: white;
+      color: rgb(24, 167, 88);
       font-weight: bold;
       cursor: pointer;
       transition: 0.3s;
