i back the color

--- a/signUP.html
+++ b/signUP.html
@@ -15,7 +15,7 @@
       margin: 0;
     }
     .form-box {
-      background: #fff;
+      background: #eaedec;
       padding: 30px;
       border-radius: 15px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.1);
