--- a/logIn.html
+++ b/logIn.html
@@ -61,13 +61,28 @@
 <body>
   <div class="form-box">
     <h2>Login</h2>
-    <form>
-      <input type="email" placeholder="Email" required>
-      <input type="password" placeholder="Password" required>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
     <a href="frontpage.html">← Back to Home</a>
-
   </div>
+
+  <script>
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
+      e.preventDefault(); 
+
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      if (email === "user@example.com" && password === "1234") {
+        alert("Login successful!");
+        window.location.href = "dashboard.html"; // redirect to new page
+      } else {
+        alert("Invalid email or password.");
+      }
+    });
+  </script>
 </body>
 </html>
