--- a/logIn.html
+++ b/logIn.html
@@ -76,7 +76,7 @@
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
-      if (email === "user@example.com" && password === "1234") {
+      if (email === "Acadease123@gmail.com" && password === "acadease123") {
         alert("Login successful!");
         window.location.href = "dashboard.html"; // redirect to new page
       } else {
