remove line name

--- a/logIn.html
+++ b/logIn.html
@@ -78,7 +78,7 @@
 
       if (email === "Acadease123@gmail.com" && password === "acadease123") {
         alert("Login successful!");
-        window.location.href = "dashboard.html"; // redirect to new page
+        window.location.href = "dashboard.html"; 
       } else {
         alert("Invalid email or password.");
       }
