--- a/dashboard.html
+++ b/dashboard.html
@@ -5,25 +5,130 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard - AcadEase</title>
   <style>
-    body {
+     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #e6ffed;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background: #f0fdf4;
       margin: 0;
-      flex-direction: column;
+      padding: 0;
     }
-    h1 {
+
+    header {
+      background: #1b4332;
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 1.8rem;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h2 {
       color: #1b4332;
+      margin-bottom: 15px;
     }
-    a {
+
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
       margin-top: 20px;
-      color: #1b4332;
-      font-weight: bold;
-      text-decoration: none;
     }
+
+    .card {
+      background: #d8f3dc;
+      padding: 25px;
+      border-radius: 12px;
+      text-align: center;
+      transition: 0.3s;
+      cursor: pointer;
+    }
+
+    .card:hover {
+      background: #b7e4c7;
+      transform: translateY(-5px);
+    }
+
+    .card h3 {
+      color: #1b4332;
+      margin-bottom: 10px;
+    }
+
+    .card p {
+      font-size: 0.9rem;
+      color: #333;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 30px;
+      color: #555;
+      font-size: 0.9rem;
+    }
+
+    .logout {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 10px 20px;
+      background: #1b4332;
+      color: #fff;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .logout:hover {
+      background: #40916c;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Welcome to AcadEase Dashboard</h1>
+    <p>Empowering students through smart learning</p>
+  </header>
+
+  <div class="container">
+    <h2>Quick Access</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>📘 Courses</h3>
+        <p>View your enrolled subjects and lessons.</p>
+      </div>
+      <div class="card">
+        <h3>📝 Assignments</h3>
+        <p>Track your tasks and upcoming deadlines.</p>
+      </div>
+      <div class="card">
+        <h3>📅 Schedule</h3>
+        <p>Check your daily and weekly class schedule.</p>
+      </div>
+      <div class="card">
+        <h3>📊 Grades</h3>
+        <p>Monitor your academic performance easily.</p>
+      </div>
+    </div>
+
+    <h2 style="margin-top: 40px;">Announcements</h2>
+    <p>🎯 Don’t forget: Midterm exams start next week! Review your notes early.</p>
+    <p>📢 New feature added: Upload your study materials in the Notes section.</p>
+
+    <a href="frontpage.html" class="logout">← Log Out</a>
+  </div>
+
+  <footer>
+    <p>© 2025 AcadEase | Designed to make learning easier.</p>
+  </footer>
   </style>
 </head>
 <body>
