--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AcadEase Dashboard</title>
   <style>
+    html {
+      scroll-behavior: smooth; 
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #f0fdf4;
@@ -12,7 +16,6 @@
       padding: 0;
     }
 
-    /* ===== NAVIGATION BAR ===== */
     .navbar {
       background: #1b4332;
       color: #fff;
@@ -20,7 +23,10 @@
       justify-content: space-between;
       align-items: center;
       padding: 15px 20px;
-      position: relative;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
     }
 
     .navbar h1 {
@@ -31,7 +37,7 @@
     .menu-icon {
       display: block;
       cursor: pointer;
-      font-size: 24px;
+      font-size: 26px;
       user-select: none;
     }
 
@@ -64,10 +70,10 @@
       display: flex;
     }
 
-    /* ===== CONTENT ===== */
+   
     .container {
       max-width: 900px;
-      margin: 40px auto;
+      margin: 100px auto 40px auto; 
       padding: 20px;
       background: #fff;
       border-radius: 15px;
@@ -79,37 +85,13 @@
       margin-bottom: 15px;
     }
 
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
+    p {
+      color: #333;
     }
 
-    .card {
-      background: #d8f3dc;
-      padding: 25px;
-      border-radius: 12px;
-      text-align: center;
-      transition: 0.3s;
-      cursor: pointer;
-    }
-
-    .card:hover {
-      background: #b7e4c7;
-      transform: translateY(-5px);
-    }
-
-    .card h3 {
-      color: #1b4332;
-      margin-bottom: 10px;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 30px;
-      color: #555;
-      font-size: 0.9rem;
+    section {
+      margin-top: 40px;
+      scroll-margin-top: 80px; 
     }
 
     .logout {
@@ -125,6 +107,13 @@
 
     .logout:hover {
       background: #40916c;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 30px;
+      color: #555;
+      font-size: 0.9rem;
     }
 
     @media (min-width: 700px) {
@@ -148,38 +137,37 @@
   </style>
 </head>
 <body>
-  <!-- ===== NAVBAR ===== -->
+  
   <nav class="navbar">
     <h1>AcadEase</h1>
     <span class="menu-icon" onclick="toggleMenu()">☰</span>
     <div class="nav-links" id="navLinks">
-      <a href="#courses">Courses</a>
-      <a href="#assignments">Assignments</a>
-      <a href="#schedule">Schedule</a>
-      <a href="#grades">Grades</a>
+      <a href="#courses" onclick="closeMenu()">Courses</a>
+      <a href="#assignments" onclick="closeMenu()">Assignments</a>
+      <a href="#schedule" onclick="closeMenu()">Schedule</a>
+      <a href="#grades" onclick="closeMenu()">Grades</a>
     </div>
   </nav>
 
-  <!-- ===== MAIN CONTENT ===== -->
   <div class="container">
     <section id="courses">
       <h2>📘 Courses</h2>
-      <p>View all your enrolled courses and access materials here.</p>
+      <p>Explore your enrolled subjects and access lessons, materials, and online modules in one place.</p>
     </section>
 
-    <section id="assignments" style="margin-top: 30px;">
+    <section id="assignments">
       <h2>📝 Assignments</h2>
-      <p>Stay on top of your homework and deadlines efficiently.</p>
+      <p>Track your homework, projects, and deadlines with AcadEase’s task tracker.</p>
     </section>
 
-    <section id="schedule" style="margin-top: 30px;">
+    <section id="schedule">
       <h2>📅 Schedule</h2>
-      <p>Check your class timetable and upcoming events.</p>
+      <p>Stay organized with your weekly class schedule and upcoming events.</p>
     </section>
 
-    <section id="grades" style="margin-top: 30px;">
+    <section id="grades">
       <h2>📊 Grades</h2>
-      <p>Keep track of your academic progress and performance.</p>
+      <p>Monitor your academic performance and progress with our easy-to-read grade summaries.</p>
     </section>
 
     <a href="frontpage.html" class="logout">← Log Out</a>
@@ -192,6 +180,10 @@
   <script>
     function toggleMenu() {
       document.getElementById("navLinks").classList.toggle("active");
+    }
+
+    function closeMenu() {
+      document.getElementById("navLinks").classList.remove("active");
     }
   </script>
 </body>
