--- a/dashboard.html
+++ b/dashboard.html
@@ -3,187 +3,148 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AcadEase Dashboard</title>
+  <title>AcadEase Navigation</title>
   <style>
-    html {
-      scroll-behavior: smooth; 
-    }
-
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f0fdf4;
       margin: 0;
-      padding: 0;
+      background: #f0fdf4;
     }
 
-    .navbar {
+    header {
       background: #1b4332;
-      color: #fff;
+      color: white;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 15px 20px;
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 1000;
     }
 
-    .navbar h1 {
-      font-size: 1.5rem;
+    header h1 {
       margin: 0;
+      font-size: 1.5rem;
     }
 
     .menu-icon {
-      display: block;
-      cursor: pointer;
       font-size: 26px;
+      cursor: pointer;
       user-select: none;
     }
 
-    .nav-links {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 60px;
-      right: 20px;
-      background: #40916c;
-      border-radius: 10px;
-      width: 180px;
-      text-align: right;
-      box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    }
-
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      padding: 12px 15px;
-      display: block;
-      transition: 0.3s;
-    }
-
-    .nav-links a:hover {
-      background: #52b788;
-    }
-
-    .nav-links.active {
-      display: flex;
-    }
-
-   
-    .container {
-      max-width: 900px;
-      margin: 100px auto 40px auto; 
-      padding: 20px;
-      background: #fff;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    h2 {
-      color: #1b4332;
-      margin-bottom: 15px;
-    }
-
-    p {
-      color: #333;
-    }
-
-    section {
-      margin-top: 40px;
-      scroll-margin-top: 80px; 
-    }
-
-    .logout {
-      display: inline-block;
-      margin-top: 25px;
-      padding: 10px 20px;
+    .side-nav {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
       background: #1b4332;
-      color: #fff;
-      border-radius: 8px;
+      color: white;
+      padding-top: 60px;
+      transition: 0.3s;
+      z-index: 1000;
+    }
+
+    .side-nav.active {
+      left: 0;
+    }
+
+    .side-nav a {
+      display: block;
+      color: white;
       text-decoration: none;
+      padding: 15px 25px;
+      font-size: 1.1rem;
       transition: 0.3s;
     }
 
-    .logout:hover {
+    .side-nav a:hover {
       background: #40916c;
     }
 
-    footer {
-      text-align: center;
-      margin-top: 30px;
-      color: #555;
-      font-size: 0.9rem;
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      display: none;
+      z-index: 500;
     }
 
+    .overlay.active {
+      display: block;
+    }
+
+    /* PAGE CONTENT */
+    main {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    main h2 {
+      color: #1b4332;
+      margin-top: 50px;
+    }
+
+    /* Responsive */
     @media (min-width: 700px) {
-      .nav-links {
-        display: flex !important;
-        position: static;
-        flex-direction: row;
-        background: none;
-        box-shadow: none;
-        width: auto;
-      }
-
-      .nav-links a {
-        padding: 0 15px;
-      }
-
       .menu-icon {
         display: none;
+      }
+
+      .side-nav {
+        left: 0;
+        width: 200px;
+        height: 100%;
+        position: fixed;
+      }
+
+      main {
+        margin-left: 200px;
+        text-align: left;
+      }
+
+      .overlay {
+        display: none !important;
       }
     }
   </style>
 </head>
 <body>
-  
-  <nav class="navbar">
+
+  <header>
     <h1>AcadEase</h1>
     <span class="menu-icon" onclick="toggleMenu()">☰</span>
-    <div class="nav-links" id="navLinks">
-      <a href="#courses" onclick="closeMenu()">Courses</a>
-      <a href="#assignments" onclick="closeMenu()">Assignments</a>
-      <a href="#schedule" onclick="closeMenu()">Schedule</a>
-      <a href="#grades" onclick="closeMenu()">Grades</a>
-    </div>
-  </nav>
+  </header>
 
-  <div class="container">
-    <section id="courses">
-      <h2>📘 Courses</h2>
-      <p>Explore your enrolled subjects and access lessons, materials, and online modules in one place.</p>
-    </section>
-
-    <section id="assignments">
-      <h2>📝 Assignments</h2>
-      <p>Track your homework, projects, and deadlines with AcadEase’s task tracker.</p>
-    </section>
-
-    <section id="schedule">
-      <h2>📅 Schedule</h2>
-      <p>Stay organized with your weekly class schedule and upcoming events.</p>
-    </section>
-
-    <section id="grades">
-      <h2>📊 Grades</h2>
-      <p>Monitor your academic performance and progress with our easy-to-read grade summaries.</p>
-    </section>
-
-    <a href="frontpage.html" class="logout">← Log Out</a>
+  <div class="side-nav" id="sideNav">
+    <a href="#assignments">📝 Assignments</a>
+    <a href="#courses">📘 Courses</a>
+    <a href="#schedule">📅 Schedule</a>
+    <a href="#grades">📊 Grades</a>
   </div>
 
-  <footer>
-    <p>© 2025 AcadEase | Making learning simpler and smarter.</p>
-  </footer>
+  <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
+
+  <main>
+    <h2 id="assignments">📝 Assignments</h2>
+    <p>Track your ongoing and completed assignments here.</p>
+
+    <h2 id="courses">📘 Courses</h2>
+    <p>Browse through your enrolled subjects and access materials.</p>
+
+    <h2 id="schedule">📅 Schedule</h2>
+    <p>View your upcoming classes and important events.</p>
+
+    <h2 id="grades">📊 Grades</h2>
+    <p>Monitor your academic progress and performance summary.</p>
+  </main>
 
   <script>
     function toggleMenu() {
-      document.getElementById("navLinks").classList.toggle("active");
-    }
-
-    function closeMenu() {
-      document.getElementById("navLinks").classList.remove("active");
+      document.getElementById("sideNav").classList.toggle("active");
+      document.getElementById("overlay").classList.toggle("active");
     }
   </script>
 </body>
