--- a/frontpage.html
+++ b/frontpage.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1>AcadEase</h1>
+    <h1>AcadEase!</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#features">Features</a>
