--- a/frontpage.html
+++ b/frontpage.html
@@ -23,7 +23,7 @@
 
   <section class="hero">
     <div>
-      <h2> A Smart Portal</h2>
+      <h2> A Online Portal</h2>
       <p>AcadEase helps students and teachers stay organized with assignments, schedules, and communication – all in one powerful platform.</p>
       <a href="#features" class="btn">Get Started</a>
     </div>
