--- a/frontpage.html
+++ b/frontpage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AcadEase!</title>
+  <title>AcadEase</title>
   <link rel="stylesheet" href="style.css"> 
   <a href="login.html" class="btn">Sign In</a>
   <a href="signup.html" class="btn">Sign Up</a>
