--- a/signUP.html
+++ b/signUP.html
@@ -14,47 +14,71 @@
       height: 100vh;
       margin: 0;
     }
+
     .form-box {
       background: #eaedec;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-      width: 320px;
+      padding: 50px 60px;
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+      width: 420px;
       text-align: center;
+      transition: 0.3s ease;
     }
+
+    .form-box:hover {
+      transform: scale(1.02);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    }
+
     h2 {
       color: #1b4332;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
+      font-size: 2rem;
     }
+
     input {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
+      padding: 14px;
+      margin: 12px 0;
       border: 1px solid #ccc;
-      border-radius: 8px;
+      border-radius: 10px;
+      font-size: 1rem;
     }
+
     button {
       width: 100%;
-      padding: 12px;
+      padding: 14px;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       background: #1b4332;
       color: rgb(24, 167, 88);
       font-weight: bold;
+      font-size: 1rem;
       cursor: pointer;
       transition: 0.3s;
+      margin-top: 10px;
     }
+
     button:hover {
       background: #40916c;
     }
+
     p {
       margin-top: 15px;
       font-size: 0.9rem;
     }
+
     a {
+      display: inline-block;
+      margin-top: 20px;
       color: #1b4332;
       text-decoration: none;
       font-weight: bold;
+      transition: 0.2s;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -68,7 +92,6 @@
       <button type="submit">Sign Up</button>
     </form>
     <a href="frontpage.html">← Back to Home</a>
-
   </div>
 </body>
 </html>
