--- a/dashboard.html
+++ b/dashboard.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AcadEase Dashboard</title>
-
+  <title>AcadEase Navigation</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f0fdf4;
       margin: 0;
+      background: #f0fdf4;
     }
 
-    .nav-header {
+    header {
       background: #1b4332;
       color: white;
       display: flex;
@@ -21,9 +20,15 @@
       padding: 15px 20px;
     }
 
+    header h1 {
+      margin: 0;
+      font-size: 1.5rem;
+    }
+
     .menu-icon {
       font-size: 26px;
       cursor: pointer;
+      user-select: none;
     }
 
     .side-nav {
@@ -45,10 +50,11 @@
 
     .side-nav a {
       display: block;
-      padding: 15px 25px;
-      text-decoration: none;
       color: white;
+      text-decoration: none;
+      padding: 15px 25px;
       font-size: 1.1rem;
+      transition: 0.3s;
     }
 
     .side-nav a:hover {
@@ -71,19 +77,41 @@
     }
 
     main {
+      padding: 40px 20px;
       text-align: center;
-      margin-top: 100px;
+    }
+
+    main h2 {
+      color: #1b4332;
+      margin-top: 50px;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>AcadEase</h1>
+    <span class="menu-icon" onclick="toggleMenu()">☰</span>
+  </header>
+
+  <div class="side-nav" id="sideNav">
+    <a href="assignment.html">📝 Assignments</a>
+    <a href="#courses">📘 Courses</a>
+    <a href="#schedule">📅 Schedule</a>
+    <a href="#grades">📊 Grades</a>
+  </div>
+
+  <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
 
   <main>
     <h2>Welcome to AcadEase Dashboard</h2>
     <p>Use the menu (☰) to navigate between your study tools.</p>
   </main>
 
-  <script src="navigation.js"></script>
-
+  <script>
+    function toggleMenu() {
+      document.getElementById("sideNav").classList.toggle("active");
+      document.getElementById("overlay").classList.toggle("active");
+    }
+  </script>
 </body>
 </html>
