adding div class in my dashboard and assignment

--- a/assignment.html
+++ b/assignment.html
@@ -78,10 +78,13 @@
 </head>
 <body>
 
-  <main>
-    <h2>Welcome to AcadEase Dashboard</h2>
-    <p>Use the menu (☰) to navigate between your study tools.</p>
-  </main>
+  <div class="side-nav" id="sideNav">
+    <a href="index.html">🏠 Dashboard</a>
+    <a href="assignment.html">📝 Assignments</a>
+    <a href="#courses">📘 Courses</a>
+    <a href="#schedule">📅 Schedule</a>
+    <a href="#grades">📊 Grades</a>
+</div>
 
   <script src="navigation.js"></script>
 
