--- a/dashboard.html
+++ b/dashboard.html
@@ -94,11 +94,13 @@
   </header>
 
   <div class="side-nav" id="sideNav">
+    <a href="index.html">🏠 Dashboard</a>
     <a href="assignment.html">📝 Assignments</a>
     <a href="#courses">📘 Courses</a>
     <a href="#schedule">📅 Schedule</a>
     <a href="#grades">📊 Grades</a>
-  </div>
+</div>
+
 
   <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
 
