--- a/frontpage.html
+++ b/frontpage.html
@@ -11,7 +11,7 @@
     <h1>AcadEase!</h1>
     <nav>
       <a href="#about">About</a>
-      <a href="#features">Feature</a>
+      <a href="#features">Features</a>
     </nav>
   </header>
 
