--- a/assignment.html
+++ b/assignment.html
@@ -84,7 +84,7 @@
 
   <div class="nav-header">
     <h3>Create Assignment</h3>
-    <a href="dashboard.html" class="back-btn">⬅ Back to Dashboard</a>
+    <a href="dashboard.html" class="back-btn">⬅ Back to Menu</a>
   </div>
 
   <div class="container">
