ill add sa paragraph for my discription

--- a/dashboard.html
+++ b/dashboard.html
@@ -137,6 +137,11 @@
 
   <main>
     <h1>Welcome to AcadEase Dashboard</h1>
+    <p>AcadEase is a simple to use academic management platform that helps students easily manage their academic work,
+       schedules, and deadlines. The platform has an organized and intuitive design that helps students track important 
+       deadlines, keep track of their classes, and manage expectations for academic success. AcadEase is easy to navigate, 
+       and, with its helpful features, it promotes studying and productivity in a simple way that helps to elevate students 
+       every day.</p>
     
   </main>
 
