ill add back btn function in my css style and the dashboard and create ill add style

--- a/create.html
+++ b/create.html
@@ -84,7 +84,6 @@
 
   <div class="nav-header">
     <h3>Create Assignment</h3>
-    <a href="dashboard.html" class="back-btn">⬅ Back to Menu</a>
   </div>
 
   <div class="container">
@@ -100,7 +99,11 @@
     <input type="date" id="deadline">
 
     <button onclick="saveAssignment()">Create Assignment</button>
+
   </div>
+<div class="back-container">
+  <a href="dashboard.html" class="back-btn">⬅ Back to Menu</a>
+</div>
 
 
   <!-- ADD JAVASCRIPT FOR SAVING -->
