--- a/dashboard.html
+++ b/dashboard.html
@@ -125,7 +125,7 @@
 
   <div class="side-nav" id="sideNav">
     <a href="index.html">🏠 Dashboard</a>
-    <a href="assignment.html">📝 Assignments</a>
+    <a href="create.html">📝 Assignments</a>
     <a href="#courses">📘 Courses</a>
     <a href="#schedule">📅 Schedule</a>
     <a href="#grades">📊 Grades</a>
