adding account page

--- a/dashboard.html
+++ b/dashboard.html
@@ -124,7 +124,7 @@
   </header>
 
   <div class="side-nav" id="sideNav">
-    <a href="index.html">🏠 Dashboard</a>
+    <a href="account.html">👤 Account</a>
     <a href="create.html">📝 Assignments</a>
     <a href="#courses">📘 Courses</a>
     <a href="#schedule">📅 Schedule</a>
