--- a/account.html
+++ b/account.html
@@ -15,79 +15,49 @@
     header {
       background: #1b4332;
       color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
       padding: 15px 20px;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.5rem;
-    }
-
-    main {
-      max-width: 500px;
-      margin: 50px auto;
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       text-align: center;
     }
 
-    main h2 {
-      color: #1b4332;
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 80px;
+    }
+
+    .profile-pic {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      background: #40916c;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: white;
       margin-bottom: 20px;
     }
 
-    .info {
-      text-align: left;
-      margin: 15px 0;
-      line-height: 1.6;
-    }
-
-    .info strong {
-      display: inline-block;
-      width: 100px;
-    }
-
-    .btn {
-      display: inline-block;
-      width: 80%;
-      max-width: 250px;
-      padding: 12px 0;
-      margin: 10px 0;
-      background: #1b4332;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-      transition: 0.3s;
-      cursor: pointer;
-    }
-
-    .btn:hover {
-      background: #40916c;
+    h2 {
+      color: #1b4332;
+      font-size: 2rem;
+      margin: 0;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>AcadEase</h1>
+    <h1>Account</h1>
   </header>
 
   <main>
-    <h2>My Account</h2>
+    <!-- Profile Picture -->
+    <div class="profile-pic">👤</div>
 
-    <div class="info">
-      <p><strong>Name:</strong> Ronald Postigo</p>
-      <p><strong>Email:</strong> ronald@example.com</p>
-    </div>
-
-    <a href="#" class="btn">Edit Profile</a>
-    <a href="dashboard.html" class="btn">Logout</a>
+    <!-- Website Name -->
+    <h2>AcadEase</h2>
   </main>
 
 </body>
