--- a/account.html
+++ b/account.html
@@ -4,60 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Account - AcadEase</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f0fdf4;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background: #1b4332;
-      color: white;
-      padding: 15px 20px;
-      text-align: center;
-    }
-
-    main {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 80px;
-    }
-
-    .profile-pic {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      background: #40916c;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 50px;
-      color: white;
-      margin-bottom: 20px;
-    }
-
-    h2 {
-      color: #1b4332;
-      font-size: 2rem;
-      margin: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="canvas.css">
 </head>
+
 <body>
 
-  <header>
-    <h1>Account</h1>
-  </header>
+  <div class="sidebar">
+    <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" class="sidebar-logo">
+
+    <a class="nav-item" href="index.html">🏠<br>Home</a>
+    <a class="nav-item" href="account.html">👤<br>Account</a>
+    <a class="nav-item" href="create.html">📝<br>Create</a>
+    <a class="nav-item" href="courses.html">📘<br>Courses</a>
+    <a class="nav-item" href="calendar.html">📅<br>Calendar</a>
+    <a class="nav-item" href="grades.html">📊<br>Grades</a>
+  </div>
+
+  <div class="topbar">Account</div>
 
   <main>
-    <!-- Profile Picture -->
-    <div class="profile-pic">👤</div>
+    <div class="card">
+      <h2>Your Profile</h2>
 
-    <!-- Website Name -->
-    <h2>AcadEase</h2>
+      <div style="display:flex; align-items:center; gap:20px;">
+        <div style="width:120px;height:120px;border-radius:50%;background:#2c3e50;color:white;font-size:50px;display:flex;justify-content:center;align-items:center;">
+          👤
+        </div>
+
+        <div>
+          <p><strong>Name:</strong> Student User</p>
+          <p><strong>Platform:</strong> AcadEase</p>
+        </div>
+      </div>
+    </div>
   </main>
 
 </body>
