--- a/grades.html
+++ b/grades.html
@@ -1,34 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grades - AcadEase</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grades - AcadEase</title>
+  <link rel="stylesheet" href="canvas.css">
 
-<style>
-  body { font-family:'Segoe UI'; background:#f0fdf4; margin:0; }
-  table {
-    width:80%; margin:50px auto; border-collapse:collapse;
-    background:white; overflow:hidden; border-radius:10px;
-  }
-  th, td {
-    padding:15px; border-bottom:1px solid #ddd; text-align:center;
-  }
-  th { background:#1b4332; color:white; }
-</style>
+  <style>
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: white;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
 
+    th, td {
+      padding: 12px;
+      border-bottom: 1px solid #ddd;
+      text-align: center;
+    }
+
+    th {
+      background: #2c3e50;
+      color: white;
+    }
+
+    tr:hover {
+      background: #f2f2f2;
+    }
+  </style>
 </head>
+
 <body>
 
-  <h2 style="text-align:center;color:#1b4332;margin-top:40px;">📊 Your Grades</h2>
+  <div class="sidebar">
+    <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" class="sidebar-logo">
 
-  <table>
-    <tr><th>Subject</th><th>Midterm</th><th>Final</th><th>Average</th></tr>
-    <tr><td>Programming 1</td><td>90</td><td>94</td><td>92</td></tr>
-    <tr><td>Web Development</td><td>88</td><td>91</td><td>89.5</td></tr>
-    <tr><td>Computing</td><td>85</td><td>87</td><td>86</td></tr>
-  </table>
+    <a class="nav-item" href="index.html">🏠<br>Home</a>
+    <a class="nav-item" href="account.html">👤<br>Account</a>
+    <a class="nav-item" href="create.html">📝<br>Create</a>
+    <a class="nav-item" href="courses.html">📘<br>Courses</a>
+    <a class="nav-item" href="calendar.html">📅<br>Calendar</a>
+    <a class="nav-item" href="grades.html">📊<br>Grades</a>
+  </div>
 
-  <script src="navigation.js"></script>
+  <div class="topbar">Grades</div>
+
+  <main>
+    <h1>Your Grades</h1>
+
+    <table>
+      <tr>
+        <th>Subject</th>
+        <th>Grade</th>
+        <th>Status</th>
+      </tr>
+
+      <tr>
+        <td>Math</td>
+        <td>92%</td>
+        <td>✔ Passed</td>
+      </tr>
+
+      <tr>
+        <td>Science</td>
+        <td>89%</td>
+        <td>✔ Passed</td>
+      </tr>
+
+      <tr>
+        <td>English</td>
+        <td>94%</td>
+        <td>✔ Passed</td>
+      </tr>
+
+      <tr>
+        <td>Computer Science</td>
+        <td>97%</td>
+        <td>✔ Passed</td>
+      </tr>
+    </table>
+  </main>
+
 </body>
 </html>
