change text in label

--- a/create.html
+++ b/create.html
@@ -95,7 +95,7 @@
     <label>Description:</label>
     <textarea rows="5" id="description" placeholder="Describe the task here..."></textarea>
 
-    <label>Deadline:</label>
+    <label>Date of Submitting:</label>
     <input type="date" id="deadline">
 
     <button onclick="saveAssignment()">Create Assignment</button>
