--- a/create.html
+++ b/create.html
@@ -100,10 +100,9 @@
 
   </div>
 <div class="back-container">
-  <a href="dashboard.html" class="back-btn">⬅ Back to Menu</a>
+  <a href="dashboard.html" class="back-btn">Back to Menu</a>
  
 </div>
-
 
   <!-- ADD JAVASCRIPT FOR SAVING -->
   <script>
