--- a/dashboard.html
+++ b/dashboard.html
@@ -144,11 +144,14 @@
     
   </main>
 
+<a href="course.html" class="card">Courses</a>
+
   <script>
     function toggleMenu() {
       document.getElementById("sideNav").classList.toggle("active");
       document.getElementById("overlay").classList.toggle("active");
     }
+
   </script>
 </body>
 </html>
