--- a/dashboard.html
+++ b/dashboard.html
@@ -125,10 +125,11 @@
 
   <div class="side-nav" id="sideNav">
     <a href="create.html">📝 Assignments</a>
-    <a href="#courses">📘 Courses</a>
+    <a href="course.html">📘 Courses</a>
     <a href="#schedule">📅 Schedule</a>
     <a href="#grades">📊 Grades</a>
 </div>
+
 
 <div id="assignmentList"></div>
 
@@ -144,8 +145,6 @@
     
   </main>
 
-<a href="course.html" class="card">Courses</a>
-
   <script>
     function toggleMenu() {
       document.getElementById("sideNav").classList.toggle("active");
@@ -153,5 +152,8 @@
     }
 
   </script>
+
+  <a href="course.html">📘 Courses</a>
+
 </body>
 </html>
